[artf620462]-Configuration created and updated message is not visible in Ui for Iphone project fixed.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -6172,6 +6172,7 @@ color: #313131;
 .dd-selected-text, .dd-option-text {
 	margin-bottom: 0px !important;
 	font-size: 12px !important;
+	padding-left: 34px;
 }
 .dd-selected, .dd-option {
 	text-decoration: none !important;
@@ -6395,6 +6396,15 @@ color: #313131;
 .customer_select_div .dd-option-text:hover {
 	color: black;
 }
+
+.customer_select_div .dd-selected-text {
+	padding-left: 0px !important;
+}
+
+.customer_select_div .dd-option-text {
+	padding-left: 7px !important;
+}
+
 .mapHeading {
 	color:#FFFFFF !important;
 }
