--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/blue.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/blue.css
@@ -1673,11 +1673,3 @@ table tr {
 .updateMsg {
 	float: left !important;
 }
-
-.dd-options {
-    width: 175px !important;
-}
-
-.dd-select {
-    width: 175px !important;
-}
